--- a/src/renderer/pages/app.css
+++ b/src/renderer/pages/app.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #333;
-  color: #fff;
+}
+
+.monaco-editor .margin {
+  background-color: #fafafa !important;
 }
