--- a/src/renderer/pages/app.css
+++ b/src/renderer/pages/app.css
@@ -3,6 +3,31 @@ body {
   padding: 0;
 }
 
-.monaco-editor .margin {
-  background-color: #fafafa !important;
+.Editor .CodeMirror {
+  font-size: 14px;
+  font-family: monaco, monospace;
+}
+
+.CodeMirror.cm-s-default .cm-keyword {
+  color: #0000ff;
+}
+
+.CodeMirror.cm-s-default .cm-comment {
+  color: #008000;
+}
+
+.CodeMirror.cm-s-default.cm-fat-cursor .CodeMirror-cursor,
+.CodeMirror.cm-s-default .cm-animate-fat-cursor {
+  background-color: #cccccc;
+  opacity: 0.8;
+}
+
+.CodeMirror.cm-s-default .CodeMirror-cursor {
+  border-left: 2px solid #999999;
+}
+
+.CodeMirror.cm-s-default .cm-tab:before {
+  content: "→";
+  color: #999999;
+  position: absolute;
 }
